# UrbanAI

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGES.md  CROWD_ANALYSIS_README.md  DEMO_VS_PRODUCTION.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  Makefile  NEXTJS_FINAL_SUMMARY.md  NEXTJS_PRODUCTION_SETUP.md  Procfile  QUICKSTART.md  QUICK_REFERENCE.txt  QUICK_START.md  README.md  README_SIMPLE.md  Start.sh  VITE_PRODUCTION_SETUP.md  basic_test.py  build_and_run.sh  complete_demo.py  docker-compose-simple.yml  docker-compose.yml  example_crowd_analysis.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  run.sh  setup.py  simple_test.py  test_enhanced_crowd_analysis.py  vercel.json  verify_setup.sh
Read/: CROWD_ANALYSIS_README.md  DEMO_QUICK_REFERENCE.txt  DEMO_VS_PRODUCTION.md  DEPLOYMENT.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE.md  NEXTJS_FINAL_SUMMARY.md  NEXTJS_PRODUCTION_SETUP.md  NEXTJS_SETUP_COMPLETE.md  PRODUCTION_SETUP_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_DEPLOY.md  QUICK_REFERENCE.txt  QUICK_START.md  README_VIDEO_ANALYSIS.md  STARTUP_SETUP.md  STRUCTURE.md  VIDEO_ANALYSIS_SETUP.md  VITE_PRODUCTION_SETUP.md
backend/: main.py
configs/: config.yaml  research_config.yaml  yolov26_config.yaml
dashboard/: .env.example  next.config.js  tsconfig.tsbuildinfo
dashboard/.next/: BUILD_ID  trace
dashboard/react_ui/: .env.example  .vercelignore  index.html  tailwind.config.js  vercel.json
deployment/cloud_config/: README.md
deployment/docker/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.service  docker-compose.yml  nginx.conf
deployment/edge_config/: README.md
docs/: ARCHITECTURE.md  SERVICE_INTERACTION_MAP.md  SYSTEM_FLOW.md
research_experiments/: __init__.py  train_yolov26.py
scripts/: __init__.py  detect_and_risk.py  real_camera_processing.py  real_video_analysis.py  run_api.py  run_pipeline.py  simple_camera_processing.py  simple_video_analysis.py
scripts/setup/: setup.sh
sentient_city/: __init__.py  pipeline.py
sentient_city/backend_api/: __init__.py
sentient_city/core/: __init__.py  events.py
sentient_city/edge_ai/: __init__.py
sentient_city/memory_engine/: __init__.py
sentient_city/mlops/: ab_testing.py  metrics_collector.py  model_monitor.py
sentient_city/perception/: pipeline.py
sentient_city/security/: __init__.py  audit_logger.py  authentication.py  encryption.py  privacy_masking.py
sentient_city/utils/: __init__.py  config.py  logger.py
sentientcity/: __init__.py
sentientcity/core/: logging.py  service.py  settings.py
sentientcity/schemas/: events.py
tests/: __init__.py  conftest.py  test_edge_ai.py  test_integration.py  test_mlops.py  test_security.py  test_tracking.py
tests/unit/: test_tracking.py
urbanai/: __init__.py  logging.py  pipeline.py
urbanai_core/: __init__.py
(+203 files in other folders)
