[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentientcity"
version = "0.1.0"
description = "Autonomous Multi-Agent Smart City Intelligence System"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SENTIENTCITY Team" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Async
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "httpx>=0.26.0",
    
    # Data
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    
    # ML/DL
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "onnxruntime>=1.16.0",
    
    # Messaging
    "aiokafka>=0.10.0",
    "redis>=5.0.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # Observability
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    
    # Utils
    "typer>=0.9.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]
ml = [
    "opencv-python>=4.9.0",
    "albumentations>=1.3.0",
    "wandb>=0.16.0",
    "mlflow>=2.10.0",
    "tensorboard>=2.15.0",
]
edge = [
    "onnxruntime-gpu>=1.16.0",
    "tensorrt>=8.6.0",
]

[project.scripts]
sentient = "sentientcity.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sentientcity"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=sentientcity --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]
